# boostcamp

./: .gitignore  README.md  main.py  pyproject.toml
doc/: autoencoder.ipynb  week01.md  week02.ipynb  week02.md  week02_PCA.ipynb  week03.ipynb  week03_transformer.ipynb  week04.ipynb  week05.ipynb  week06.ipynb  week07.ipynb  week09.ipynb
examples/: week01.ipynb  week02.ipynb  week02_PCA.ipynb
